# Gdelt-data-processing-to-Apache-iceberg

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  headers.csv  main.py  pyproject.toml
examples/queries/: select.py  select_snapshot.py  update_schema.py
iceberg_services/: Dockerfile  data_processor.py  kafka_consumer.py  kafka_producer.py
iceberg_services/iceberg/: iceberg.py
iceberg_services/parser/: gdelt_parser.py  kafka_parser.py
kubernetes/gdeltprocessors/: consumer-deployment.yaml  iceberg-secrets.yaml  producer-service-deployment.yaml  registry-credentials.yaml
kubernetes/kafka/: kafka-simple-deployment.yaml  kafka-simple-service.yaml  kafka-ui-deployment.yaml  kafka-ui-service.yaml
kubernetes/notebook/: ipynb-interface-deploy.yaml  ipynb-persistent-volume.yaml  ipynb-pv-claim.yaml  jupyter-ui.service.yaml
kubernetes/postgres/: postgres-data-pv-claim.yaml  postgres-persistent-volume.yaml  postgresql-deployment.yaml  postgresql-service.yaml
